# roster

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  org.toml  package-lock.json  package.json  providers.json
.github/workflows/: release.yml
assets/logo/: README.md
box/: Dockerfile  roster-lock
box/extensions/: actions.ts  web.ts
docs/: README.md  actions-and-trust.md  architecture.md  box-spec.md  box.md  budget-spec.md  capable-box.md  channels.md  charter-spec.md  cli.md  configuration.md  connections.md  context-compiler-spec.md  context.md  conversation-spec.md  gateway.md  getting-started.md  impyard-handoff.md  inbound-spec.md  injection-spec.md  judge-spec.md  knowledge-boundary.md  knowledge-repo-spec.md  knowledge.md  layout.md  memory-spec.md  memory.md  repos.md  roster-handoff.md  rust-port.md  security.md  slack-channel.md  store.md  supervisor-spec.md  work.md
docs/plans/: agent-selection.md  channel-semantics.md  knowledge-branch-per-run.md  worker-environment.md
docs/specs/: task-management.md
gateway/: Cargo.toml
gateway/src/: budget.rs  ca.rs  judge.rs  ledger.rs  main.rs  providers.rs  proxy.rs  registry.rs  schema.rs  util.rs  vault.rs
gateway/src/cmd/: connect.rs  create.rs  deploy.rs  mod.rs  run_box.rs  vault_sync.rs
policies/: budget.json
src/: action.rs  box.ts  budget.rs  ca.ts  cli.ts  config.rs  connect.ts  context.rs  discord.rs  fetch.rs  gate.rs  gateway.ts  journal.rs  knowledge.rs  ledger.rs  lockdown.ts  main.rs  memory.rs  paths.rs  providers.ts  proxy.rs  queue.rs  registry.rs  runlog.rs  smtp.rs  statefile.rs  storage.rs  trigger.rs  trust.rs  util.rs  vault.rs  vault.ts  workerspec.ts
src/action/: gate.rs  mod.rs  smtp.rs  trust.rs
src/channel/: discord.rs  links.rs  listen.rs  mod.rs  relay.rs  slack.rs  slash.rs
src/cli/: approvals.rs  channel.rs  connections.rs  create.rs  gates.rs  imp.rs  init.rs  knowledge.rs  memory.rs  mod.rs  runs.rs  server.rs  task.rs  vault.rs  worker.rs
src/cmd/: channel.rs  connect.rs  create.rs  deploy.rs  gates.rs  init.rs  knowledge.rs  listen.rs  mod.rs  notes.rs  queue.rs  relay.rs  run_box.rs  runs.rs  server.rs  session.rs  supervise.rs  vault_sync.rs  worker.rs
src/credential/: connect.rs  mod.rs  providers.default.json  providers.rs  registry.rs  vault.rs
src/gateway/: budget.rs  ca.rs  judge.rs  ledger.rs  mod.rs  proxy.rs  schema.rs  scope.rs  tls.rs
src/imp/: boundary.rs  context.rs  journal.rs  knowledge.rs  memory.rs  mod.rs  storage.rs
src/run/: boxed.rs  mod.rs  runlog.rs  session.rs
src/work/: dispatch.rs  mod.rs  queue.rs  tms.rs  trigger.rs
src/worker/: boundary.rs  context.rs  journal.rs  knowledge.rs  memory.rs  mod.rs  storage.rs  store.rs
test/: refresh.test.ts
workers/yuko/: charter.md  identity.md  worker.toml
