[package]
name = "impyard"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["Manas Garg <manasgarg@gmail.com>"]
description = "Rent the intelligence, own the governance — a control plane for imps: software colleagues whose every action passes through a gateway you control (default-deny egress, injected credentials, budgets, approval gates, audit)."
license = "Apache-2.0"
repository = "https://github.com/manasgarg/impyard"
homepage = "https://github.com/manasgarg/impyard"
documentation = "https://github.com/manasgarg/impyard/blob/main/docs/impyard-handoff.md"
readme = "README.md"
keywords = ["agents", "governance", "gateway", "sandbox", "llm"]
categories = ["command-line-utilities", "development-tools"]
# The published crate is the host-side binary plus what you need to build the
# box it runs imps in. CI config and the dev lockfile for pi stay out.
exclude = [".github/", "node_modules/", "target/", "*.tar.gz"]

[[bin]]
name = "impyard"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "ring", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
cel-interpreter = "0.10.0"
base64 = "0.22.1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rustls-native-certs = "0.8"
# Discord gateway (inbound) WebSocket client — reuses our rustls stack.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"

[dev-dependencies]
x509-parser = "0.18"

[profile.dev]
# Faster iterative builds during the port.
debug = 1
