[package]
name = "roster"
version = "0.0.1"
edition = "2021"
description = "Roster's trusted host-side control plane: gateway + orchestration"

[[bin]]
name = "roster"
path = "src/main.rs"

[dependencies]
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "ring", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
cel-interpreter = "0.10.0"
base64 = "0.22.1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
x509-parser = "0.18"

[profile.dev]
# Faster iterative builds during the port.
debug = 1
